# open-game-dubber

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  PRD.md  README.md  debug_tts_lang.py  pyproject.toml
.github/workflows/: ai-pr-description.yml  ci.yml  pr-labeler.yml
scripts/: generate-pr-description.py
src/core/: pipeline.py  state_manager.py
src/interface/: cli.py
src/models/: stt.py  translator.py  tts.py
src/open_game_dubber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: audio_processor.py  demucs_wrapper.py  model_manager.py
tests/: debug_translator.py  test_audio_processor.py  test_cli.py  test_dependency_guards.py  test_model_manager.py  test_pipeline.py  test_real_tts.py  test_stt.py  test_translator.py  test_tts.py
